# SigilAtlasV

./: .gitignore  up.sh
app/: .gitignore  build-photos.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs  photos.rs  sidecar.rs
python/: pyproject.toml
python/sigil_atlas/: aggregation.py  cancel.py  cli.py  collage.py  db.py  embedding_provider.py  layout.py  layout_neighborhood.py  model_registry.py  neighborhood.py  ontology.py  ontology.yaml  overview.py  progress.py  relevance_filter.py  render_slice.py  serve.py  sigilml_text.py  slice.py  spacelike.py  taxonomy.py  taxonomy_cinematic.yaml  taxonomy_color.yaml  taxonomy_colors.yaml  taxonomy_composition.yaml  taxonomy_photographic.yaml  taxonomy_semantic.yaml  taxonomy_semantic_animals.yaml  taxonomy_semantic_clothes.yaml  taxonomy_semantic_environments.yaml  taxonomy_semantic_insects.yaml  taxonomy_semantic_plants.yaml  taxonomy_visual.yaml  taxonomy_visual_artists.yaml  taxonomy_visual_arts.yaml  things.py  workspace.py  wrapping.py
python/sigil_atlas/ingest/: cluster.py  embed.py  metadata.py  photos_source.py  pipeline.py  pixel_features.py  source.py  thumbnail.py
python/tests/: test_clip_discrimination.py  test_db.py  test_ingest_progress.py  test_layout.py  test_neighborhood.py  test_ontology.py  test_photos_source.py  test_sigilml_text.py  test_slice.py  test_source.py  test_spacelike.py  test_wrapping.py
scripts/: compile.sh  export-sigil.sh  release.sh
sigil_atlas.sigil/: affordance-create-sigil.md  affordance-export-sigil.md  affordance-import-sigil.md  affordance-move-in-sigil-space.md  affordance.order  how-to-inhabit-the-sigil.md  language.md  spatial.layout.json  vision.md
tools/: ontology_aesthetic.yaml  ontology_attention.yaml  ontology_spec.yaml  precompute_dictionary.py  (+2 more)
(+613 files in other folders)
